Remove sub navigation background
Removes background on the sub navigation items so it does not overlay the body background colour

--- a/pubs/styles/base.scss
+++ b/pubs/styles/base.scss
@@ -90,3 +90,7 @@ body, .govuk-template__body {
   display: inline-block;
   min-height: 24px;
 }
+
+.x-govuk-sub-navigation__section-item {
+  background: none;
+}
